--- a/xcconfigs/Project.xcconfig
+++ b/xcconfigs/Project.xcconfig
@@ -64,6 +64,7 @@ CLANG_WARN_BLOCK_CAPTURE_AUTORELEASING                     = YES
 CLANG_WARN_BOOL_CONVERSION                                 = YES
 CLANG_WARN_COMMA                                           = NO
 CLANG_WARN_CONSTANT_CONVERSION                             = YES
+CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS                 = YES
 CLANG_WARN_DIRECT_OBJC_ISA_USAGE                           = YES_ERROR
 CLANG_WARN__DUPLICATE_METHOD_MATCH                         = YES
 CLANG_WARN_DOCUMENTATION_COMMENTS                          = YES
