--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: objective-c
 osx_image: xcode10.1
+branches:
+  only:
+  - master
 before_install:
   - brew update
   - brew install doxygen
